# slambook2

./: .gitignore
ch10/: pose_graph_g2o_SE3.cpp  pose_graph_g2o_lie_algebra.cpp  result_lie_Jr.g2o
ch11/: CMakeLists.txt  loop_closure.cpp
ch12/dense_RGBD/: CMakeLists.txt  pointcloud_mapping.cpp  surfel_mapping.cpp
ch12/dense_mono/: CMakeLists.txt  dense_mapping.cpp
ch13/: CMakeLists.txt
ch13/app/: run_kitti_stereo.cpp
ch13/config/: default.yaml
ch13/include/myslam/: algorithm.h  backend.h  feature.h  frame.h  mappoint.h  visual_odometry.h
ch13/src/: backend.cpp  frame.cpp  frontend.cpp  map.cpp  mappoint.cpp  viewer.cpp  visual_odometry.cpp
ch3/examples/: CMakeLists.txt
ch4/: useSophus.cpp
ch5/imageBasics/: CMakeLists.txt  imageBasicstest.cpp  undistortImagetest.cpp
ch5/rgbd/: joinMap.cpp
ch6/: Ax=b.cpp  CMakeLists.txt  ceresCurveFitting.cpp  ceresTest.cpp  g2oCurveFitting.cpp  g2oTest.cpp  g2oTest2.cpp  gaussNewton.cpp
ch7/: CMakeLists.txt  orb_cv.cpp  orb_self.cpp  pose_estimation_2d2d.cpp  pose_estimation_3d2d.cpp  pose_estimation_3d3d.cpp  triangulation.cpp
ch8/: direct_method.cpp  optical_flow.cpp
ch9/: CeresInitialFinal.mlp  SnavelyReprojectionError.h  bundle_adjustment_ceres.cpp  bundle_adjustment_g2o.cpp  common.cpp  common.h  finalCeres.ply  finalCeresITERATIVE_SCHUR.ply  rotation.h
ch9/result/: result2023-05-19-22-33-29.txt
